--- a/index.html
+++ b/index.html
@@ -7,5 +7,22 @@
     <title>rBnb</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="navbar">
+      <div class="logo"><a href="#">Lorem Ipsum</a></div>
+      <div class="navbar-end">
+        <div class="item"><a href="">lorem</a></div>
+        <div class="item"><a href="">lorem</a></div>
+        <div class="item"><a href="">lorem</a></div>
+      </div>
+      <h1>discover the World !</h1>
+      <form class="flexForm">
+          <label for="search">
+              <img src="/ressources/icone.svg" alt="search icon">
+          </label>
+          <input type="search" placeholder="location...">
+          <button>Valider</button>
+      </form>
+    </div>
+  </body>
 </html>
