--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="navbar">
-      <div class="logo"><a href="#">Lorem Ipsum</a></div>
+      <div class="navbar-brand"><a href="#">Lorem Ipsum</a></div>
       <div class="navbar-end">
         <div class="item"><a href="">lorem</a></div>
         <div class="item"><a href="">lorem</a></div>
